--- a/about-us.html
+++ b/about-us.html
@@ -49,8 +49,8 @@
 								but I already loved the other interpretations of the character in general. My favorite is Sir Tropy in N. Sane Trilogy.<br/>
 								I do renders, drawings, fanfics and essays, and just a ton of research about the character in general.</p>
 								<p><u>Queen's 1# fan</u> : As they want to keep being anonymous, I, as Rayquane, will present them. They are the most
-								respectful fan about Lady Tropy. They are the most respectful fan about Lady Tropy. They help me with the website, and they are the person
-								who even gave me the idea of creating it. I thank them infinitely for their powerful support.
+								respectful fan about Lady Tropy. They help me with the website, and they are the person who even gave me the idea of creating
+								it. I thank them infinitely for their powerful support.
 								
 								<h2>Questions</h2>
 								<h3>Why was this website created ?</h3>
